# smile-ks-qa1

./: .gitignore  PyQAWrapperQA1.yml  README.md  pyproject.toml
src/config/: import_config_path.txt  local_config.yml  local_config_test.yml
src/ontology_cache/: __init__.py
src/smile_ks_qa1/: console.py  listener.py  main.py  qa1_ner.py  qa1_ner_listener.py
src/smile_ks_qa1/utils/: add_ks.py
